--- a/index.html
+++ b/index.html
@@ -1,48 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pets</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Hand+Pre:wght@400..700&family=Oswald:wght@200..700&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <div class="sqr1">
-        <div id="willaImg">
-            <img src="./assets/images/willa.png" alt="foto da willa">
-        </div>
-        <div id="descricaoImgW">
-            <p>Nome: Willa</p>
+    <div class="container">
+
+        <div class="sqr one">
+            <h2>Willa</h2>
+            <img src="./assets/images/willa.png" alt="foto willa">
             <ul>
                 <li>Esquentadinha</li>
                 <li>Carinhosa</li>
                 <li>Cara de besta mas é brava</li>
-        
             </ul>
         </div>
-    </div>
-
-    <div class="sqr2">
-        <div id="elvisImg">
+        <div class="sqr two">
+            <h2>Elvis</h2>
             <img src="./assets/images/elvis.png" alt="foto elvis">
-        </div>
-        <div id="descricaoImgE">
-            <p>Nome: Elvis</p>
             <ul>
                 <li>Peculiar</li>
                 <li>Não gosta muito da sociedade</li>
                 <li>Fofo</li>
-            </ul> 
+            </ul>
         </div>
-    </div>
-
-    <div class="sqr3">
-        <div id="mingauImg">
-            <img src="./assets/images/mingau.png" alt="foto Mingau">
-        </div>
-        <div class="descricaoImgM">
-            <p>Nome: Mingau</p>
+        <div class="sqrM three">
+            <h2>Mingau</h2>
+            <img src="./assets/images/mingau.png" alt="foto mingau">
             <ul>
                 <li>Preguiça</li>
                 <li>Estoica</li>
@@ -50,6 +43,5 @@
             </ul>
         </div>
     </div>
-
 </body>
 </html>
